fix responsice overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@
   --borderRadius: 6px;
 }
 
+
 body {
   font-family: "Montserrat", sans-serif;
   letter-spacing: 1px;
+  overflow-x: hidden;
 }
 
 .page-not-found {
