--- a/src/css/home.css
+++ b/src/css/home.css
@@ -38,7 +38,7 @@ body {
 .navbar-brand {
   border-radius: var(--borderRadius);
   border: 2px solid black;
-  padding: 1rem;
+  padding: .7rem;
 }
 
 .header-wrapper {
@@ -300,7 +300,7 @@ a {
 }
 
 .card {
-  padding: 10%;
+  padding: 5%;
   border-radius: var(--borderRadius);
   /* background-color: transparent; */
   border: none;
@@ -557,7 +557,42 @@ a:hover {
 
 @media (max-width: 575.98px) {
   .navbar {
-    padding: 15px;
+    padding: 5%;
+  }
+
+  .navbar ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar-toggler {
+    margin-top: 2rem;
+  }
+
+  .dropdown nav-item  {
+    width: 100%;
+    display: block;
+  }
+
+
+  .nav-item {
+    width: 100%;
+    border-bottom: 1px solid #80808014;
+  }
+
+  a.nav-link {
+    width: 100%;
+  }
+
+  .navbar .dropdown {
+    margin: 0;
+  
+
+
   }
 
   .header-wrapper {
@@ -585,7 +620,7 @@ a:hover {
   .intro-heading {
     grid-area: heading;
     color: black;
-    margin: 5%;
+    /* margin: 5%; */
     text-align: center;
   }
 
@@ -658,7 +693,7 @@ a:hover {
   .about-inner-box {
     width: 100%;
     background: white;
-    padding: 10%;
+    padding: 5%;
     border-radius: 0px;
   }
 
@@ -678,14 +713,14 @@ a:hover {
     margin: 0 auto;
   }
 
-  .about-mobile-text {
-    padding-top: 10%;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-self: center;
-    text-align: center;
-  }
+.about-mobile-text {  
+  align-self: center;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
   .about-mobile-text a {
     display: flex;
@@ -791,14 +826,13 @@ a:hover {
       "heading"
       "text "
       "text "
-      "text "
       "."
       "btn";
   }
 
   .intro-heading {
     grid-area: heading;
-    color: white;
+    color: black;
 
     text-align: center;
   }
@@ -814,8 +848,7 @@ a:hover {
 
   .intro-text {
     grid-area: text;
-    color: white;
-
+    color: black;
     text-align: center;
   }
 
